[我...我不知道]

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DoLModRspackExampleTS",
+  "name": "dol-archive-action",
   "type": "commonjs",
   "version": "1.0.0",
   "private": true,
